# agent-architect-lab

./: .env.example  .gitignore  README.md  pyproject.toml
data/notes/: agent-skills.md  evals-and-safeguards.md  harness-practices.md  memory-retrieval.md  ops-incidents.md  product-architecture-openclaw-style.md  safety-policies.md
data/skills/: agent_infra_architect.json  evals_engineer.json  harness_engineer.json  memory_retrieval_designer.json  observability_owner.json  operator_workflow_designer.json  product_architect.json  repo_researcher.json  safeguards_architect.json  safety_policy_designer.json  skill_router.json
docs/: AI_ARCHITECT_COMPETENCY_MATRIX.md  ARCHITECTURE.md  CONTROL_PLANE.md  CONTROL_PLANE_ZH.md  EVALS_AND_SAFEGUARDS_ROADMAP.md  HARNESS_PRACTICES.md  HUMAN_FEEDBACK.md  HUMAN_FEEDBACK_ZH.md  INCIDENT_BACKFILL.md  KNOWLEDGE_ROUTING.md  KNOWLEDGE_ROUTING_ZH.md  LEARNING_PATH.md  OPS_AND_INCIDENTS.md  PLANNER_PROVIDERS.md  PRODUCTION_RELEASE_SYSTEM_PLAN.md  PRODUCTION_RELEASE_SYSTEM_PLAN_ZH.md  RELEASE_LEDGER.md  RELEASE_LEDGER_ZH.md  REPORT_REGISTRY.md  ROLLOUT_REVIEW.md  RUNTIME_REALISM.md  RUNTIME_REALISM_ZH.md  SHADOW_RUNS.md
scripts/: run_mcp_server.py
src/agent_architect_lab/: __init__.py  artifact_lineage.py  cli.py  config.py  models.py
src/agent_architect_lab/agent/: __init__.py  memory.py  orchestration.py  patterns.py  (+2 more)
tests/: test_cli.py  test_control_plane.py  test_harness.py  test_incident_backfill.py  test_mcp_server.py  test_planner_provider.py  test_retrieval_flow.py  test_runtime.py  test_runtime_realism.py  test_safety.py
(+67 files in other folders)
